# buckshot-solver

./: Makefile  check.ps1  mypy.ini  pyproject.toml
buckshot_solver/: dealerlogic.py  elements.py  playerlogic.py  round.py  simulation.py  simulator.py
buckshot_solver/logics/: dealerlogic.py  logic.py  playerlogic.py
buckshot_solver/web/: app.py
buckshot_solver/web/static/: multi-input.js  script.js  styles.css
buckshot_solver/web/templates/: base.html  test.html
old_tests/: test_playerlogic.py  test_round.py  test_simulator.py
tests/: test_dealerlogic.py  test_playerlogic.py  test_roulette_result.py  test_round.py  test_simulation.py  test_simulator.py
